# Embedded-A

./: CMakeLists.txt  README.md  Teensy4_CmakeLists.txt  arm2d2_control.ino  setup_build.sh  teensy_toolchain.cmake
arduino-1.8.19/hardware/teensy/avr/cores/teensy4/: CMakeLists.txt  Makefile
arduino-1.8.19/hardware/tools/: precompile_helper  teensy_ports  teensy_post_compile  teensy_reboot  teensy_secure  teensy_serialmon  teensy_size
include/: comm.h  step.h
marsha_examples/: Stepper.cpp  Stepper.h
src/: comm.cpp  main.cpp  step.cpp
